# saykocraft-launcher

./: .gitignore  README.md
.github/workflows/: build.yml  release.yml
src/: common.css  common.js  config.js  dev-console.css  dev-console.html  dev-console.js  fonts.css  i18n.js  index.css  index.html  index.js  launcher.css  launcher.html  launcher.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  instance.rs  lib.rs  main.rs  profile_icon.rs  utils.rs
src-tauri/src/minecraft/: console.rs  error.rs  install.rs  java.rs  launch.rs  mod.rs  neoforge.rs  paths.rs  progress.rs  session_bridge.rs
src/locales/: en-US.json  tr-TR.json
