[package]
name = "saykocraft-launcher"
version = "0.1.0-beta"
description = "Launcher for SayKOCraft Minecraft Server network."
authors = ["SayKOCraft", "Namefix"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "saykocraft_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["json"] }
tokio = "1.52.3"
keyring-core = "1.0.0"
keyring = "4.0.1"
opener = "0.8.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.5"
tauri-plugin-log = "2.8.0"
image = "0.25.10"
base64 = "0.22.1"
sha2 = "0.11.0"
hex = "0.4.3"
